2016-04-20  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2665: icedtea/jamvm 2.6 fails as a
	build VM for icedtea
	* Makefile.am:
	(ICEDTEA_PATCHES): Add new patch.
	* NEWS: Updated.
	* patches/jamvm/pr2665.patch:
	Set the classLoader field in java.lang.Class
	when a class is defined.

2016-04-16  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	S8150954, PR2867, RH1176206: AWT Robot not
	compatible with GNOME Shell
	* NEWS: Fix wrong bug ID used for PR2867.

2016-03-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	S8150954, PR2867, RH1176206: AWT Robot not
	compatible with GNOME Shell
	* INSTALL: Update X11 dependency documentation.
	* configure.ac: Add check
	for libXcomposite as required by fix
	for PR2867. Correct variables used by
	xproto check.

2016-04-16  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	Bump to icedtea-2.7.0pre05.
	* Makefile.am:
	(CORBA_CHANGESET): Update to icedtea-2.7.0pre05.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 2.7.0pre05.
	* hotspot.map.in: Update to icedtea-2.7.0pre05.

2015-11-13  Andrew John Hughes  <gnu.andrew@redhat.com>

	* patches/f14-fonts.patch,
	* patches/fonts-gentoo.patch:
	Removed as now applied directly in the forest.
	* Makefile.am:
	(ICEDTEA_PATCHES): Reset to empty.
	(fonts): No need to copy Fedora files any more.
	Make a backup of the forest Gentoo fontconfig
	file before replacing with locally generated one.
	(clean-fonts): No need to remove Fedora files
	which are now provided in the forest. Restore
	the original Gentoo fontconfig from the backup.

2015-10-22  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2686: Add generated Fedora & Gentoo font